--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,4 +76,9 @@
   .btn-secondary {
     @apply bg-secondary text-secondary-foreground font-medium py-2 px-4 rounded hover:bg-opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-secondary;
   }
+
+  .bg-hero-image {
+    background-image: url('https://wac-cdn-bfldr.atlassian.com/K3MHR9G8/at/pqscp5k83xxt7pq7f67jftr/JSM_BG_Graphics.webp');
+    background-size: contain;
+  }
 }
