--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,14 @@
     background-size: contain;
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
