sidebar design changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,7 @@
     background-size: contain;
   }
 }
+.icon-xl-heavy path {
+  stroke-width: 1px !important;
+  stroke: white; /* Change color if needed */
+}
