--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,21 @@
     background-size: contain;
   }
 }
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient {
+  background: linear-gradient(270deg, #392c2a, #3e392b, #382017, #262d19);
+  background-size: 800% 800%;
+  animation: gradient 5s ease infinite;
+}
